[gd_scene load_steps=13 format=2]

[ext_resource path="res://nivel/nivelFinal/nivelFinal.gd" type="Script" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://nivel/Background.tscn" type="PackedScene" id=3]
[ext_resource path="res://nivel/PlataformasFlotantes.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player/TimerDead.tscn" type="PackedScene" id=5]
[ext_resource path="res://nivel/Piso.tscn" type="PackedScene" id=6]
[ext_resource path="res://Objetos/Camera2D.tscn" type="PackedScene" id=7]
[ext_resource path="res://BoosAssets/Entorno/Puerta.png" type="Texture" id=8]
[ext_resource path="res://Objetos/Antorchas/Antorcha.tscn" type="PackedScene" id=9]
[ext_resource path="res://Objetos/Mascota/Mascota.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/win.wav" type="AudioStream" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 79.9249 )

[node name="NivelFinal" type="Node2D"]
position = Vector2( -15.8919, 0 )
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -6.4138 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 353.43, 325.147 )
texture = ExtResource( 8 )

[node name="Mascota" parent="." instance=ExtResource( 10 )]
position = Vector2( 590.598, 348.138 )

[node name="Piso" parent="." instance=ExtResource( 6 )]
tile_data = PoolIntArray( 0, 1610612755, 0, 1, 1610612755, 0, 2, 1610612755, 0, 3, 1610612755, 0, 4, 1610612755, 0, 5, 1610612755, 0, 6, 1610612755, 0, 7, 1610612755, 0, 8, 1610612755, 0, 9, 1610612755, 0, 10, 1610612755, 0, 11, 1610612755, 0, 12, 1610612755, 0, 13, 1610612755, 0, 14, 1610612755, 0, 15, 1610612755, 0, 16, 1610612755, 0, 17, 1610612755, 0, 18, 1610612755, 0, 19, 1610612755, 0, 20, 1610612755, 0, 21, 1610612755, 0, 22, 1610612755, 0, 23, 1610612755, 0, 24, 1610612755, 0, 25, 1610612755, 0, 26, 1610612755, 0, 27, 1610612755, 0, 28, 1610612755, 0, 29, 1610612755, 0, 30, 1610612755, 0, 31, 1610612755, 0, 65536, 1610612755, 0, 65537, 1610612755, 0, 65538, 1610612755, 0, 65539, 1610612755, 0, 65540, 1610612755, 0, 65541, 1610612755, 0, 65542, 1610612755, 0, 65543, 1610612755, 0, 65544, 1610612755, 0, 65545, 1610612755, 0, 65546, 1610612755, 0, 65547, 1610612755, 0, 65548, 1610612755, 0, 65549, 1610612755, 0, 65550, 1610612755, 0, 65551, 1610612755, 0, 65552, 1610612755, 0, 65553, 1610612755, 0, 65554, 1610612755, 0, 65555, 1610612755, 0, 65556, 1610612755, 0, 65557, 1610612755, 0, 65558, 1610612755, 0, 65559, 1610612755, 0, 65560, 1610612755, 0, 65561, 1610612755, 0, 65562, 1610612755, 0, 65563, 1610612755, 0, 65564, 1610612755, 0, 65565, 1610612755, 0, 65566, 1610612755, 0, 65567, 1610612755, 0, 131072, 1610612755, 0, 131073, 1610612755, 0, 131074, 1610612755, 0, 131075, 1610612755, 0, 131076, 1610612755, 0, 131077, 1610612755, 0, 131078, 1610612755, 0, 131079, 1610612755, 0, 131080, 1610612755, 0, 131081, 1610612755, 0, 131082, 1610612755, 0, 131083, 1610612755, 0, 131084, 1610612755, 0, 131085, 1610612755, 0, 131086, 1610612755, 0, 131087, 1610612755, 0, 131088, 1610612755, 0, 131089, 1610612755, 0, 131090, 1610612755, 0, 131091, 1610612755, 0, 131092, 1610612755, 0, 131093, 1610612755, 0, 131094, 1610612755, 0, 131095, 1610612755, 0, 131096, 1610612755, 0, 131097, 1610612755, 0, 131098, 1610612755, 0, 131099, 1610612755, 0, 131100, 1610612755, 0, 131101, 1610612755, 0, 131102, 1610612755, 0, 131103, 1610612755, 0, 196608, 1610612755, 0, 196609, 1610612755, 0, 196610, 1610612755, 0, 196611, 1610612755, 0, 196612, 1610612755, 0, 196613, 1610612755, 0, 196614, 1610612755, 0, 196615, 1610612755, 0, 196616, 1610612755, 0, 196617, 1610612755, 0, 196618, 1610612755, 0, 196619, 1610612755, 0, 196620, 1610612755, 0, 196621, 1610612755, 0, 196622, 1610612755, 0, 196623, 1610612755, 0, 196624, 1610612755, 0, 196625, 1610612755, 0, 196626, 1610612755, 0, 196627, 1610612755, 0, 196628, 1610612755, 0, 196629, 1610612755, 0, 196630, 1610612755, 0, 196631, 1610612755, 0, 196632, 1610612755, 0, 196633, 1610612755, 0, 196634, 1610612755, 0, 196635, 1610612755, 0, 196636, 1610612755, 0, 196637, 1610612755, 0, 196638, 1610612755, 0, 196639, 1610612755, 0, 262144, 1610612755, 0, 262145, 1610612755, 0, 262146, 1610612755, 0, 262147, 1610612755, 0, 262148, 1610612755, 0, 262149, 1610612755, 0, 262150, 1610612755, 0, 262151, 1610612755, 0, 262152, 1610612755, 0, 262153, 1610612755, 0, 262154, 1610612755, 0, 262155, 1610612755, 0, 262156, 1610612755, 0, 262157, 1610612755, 0, 262158, 1610612755, 0, 262159, 1610612755, 0, 262160, 1610612755, 0, 262161, 1610612755, 0, 262162, 1610612755, 0, 262163, 1610612755, 0, 262164, 1610612755, 0, 262165, 1610612755, 0, 262166, 1610612755, 0, 262167, 1610612755, 0, 262168, 1610612755, 0, 262169, 1610612755, 0, 262170, 1610612755, 0, 262171, 1610612755, 0, 262172, 1610612755, 0, 262173, 1610612755, 0, 262174, 1610612755, 0, 262175, 1610612755, 0, 327680, 1610612755, 0, 327681, 1610612755, 0, 327682, 1610612755, 0, 327683, 1610612755, 0, 327684, 1610612755, 0, 327685, 1610612755, 0, 327686, 1610612755, 0, 327687, 1610612755, 0, 327688, 1610612755, 0, 327689, 1610612755, 0, 327690, 1610612736, 0, 327691, 1610612737, 0, 327692, -1610612725, 0, 327693, 1610612736, 0, 327694, 1610612737, 0, 327695, -1610612725, 0, 327696, 1610612736, 0, 327697, 1610612736, 0, 327698, 1610612737, 0, 327699, -1610612725, 0, 327700, 1610612755, 0, 327701, 1610612755, 0, 327702, 1610612755, 0, 327703, 1610612755, 0, 327704, 1610612755, 0, 327705, 1610612755, 0, 327706, 1610612755, 0, 327707, 1610612755, 0, 327708, 1610612755, 0, 327709, 1610612755, 0, 327710, 1610612755, 0, 327711, 1610612755, 0, 393216, 1610612755, 0, 393217, 1610612755, 0, 393218, 1610612755, 0, 393219, 1610612755, 0, 393220, 1610612755, 0, 393221, 1610612755, 0, 393222, 1610612755, 0, 393223, 1610612755, 0, 393224, 1610612755, 0, 393225, -1610612736, 0, 393236, 1610612747, 0, 393237, 1610612755, 0, 393238, 1610612755, 0, 393239, 1610612755, 0, 393240, 1610612755, 0, 393241, 1610612755, 0, 393242, 1610612755, 0, 393243, 1610612755, 0, 393244, 1610612755, 0, 393245, 1610612755, 0, 393246, 1610612755, 0, 393247, 1610612755, 0, 458752, 1610612755, 0, 458753, 1610612755, 0, 458754, 1610612755, 0, 458755, 1610612755, 0, 458756, 1610612755, 0, 458757, 1610612755, 0, 458758, 1610612755, 0, 458759, 1610612755, 0, 458760, 1610612755, 0, 458761, -1610612736, 0, 458772, -1073741823, 0, 458773, 1610612755, 0, 458774, 1610612755, 0, 458775, 1610612755, 0, 458776, 1610612755, 0, 458777, 1610612755, 0, 458778, 1610612755, 0, 458779, 1610612755, 0, 458780, 1610612755, 0, 458781, 1610612755, 0, 458782, 1610612755, 0, 458783, 1610612755, 0, 524288, 1610612755, 0, 524289, 1610612755, 0, 524290, 1610612755, 0, 524291, 1610612755, 0, 524292, 1610612755, 0, 524293, 1610612755, 0, 524294, 1610612755, 0, 524295, 1610612755, 0, 524296, 1610612755, 0, 524297, -1073741808, 0, 524308, -1073741824, 0, 524309, 1610612755, 0, 524310, 1610612755, 0, 524311, 1610612755, 0, 524312, 1610612755, 0, 524313, 1610612755, 0, 524314, 1610612755, 0, 524315, 1610612755, 0, 524316, 1610612755, 0, 524317, 1610612755, 0, 524318, 1610612755, 0, 524319, 1610612755, 0, 589824, 1610612755, 0, 589825, 1610612755, 0, 589826, 1610612755, 0, 589827, 1610612755, 0, 589828, 1610612755, 0, 589829, 1610612755, 0, 589830, 1610612755, 0, 589831, 1610612755, 0, 589832, 1610612755, 0, 589833, 1610612749, 0, 589844, -1073741823, 0, 589845, 1610612755, 0, 589846, 1610612755, 0, 589847, 1610612755, 0, 589848, 1610612755, 0, 589849, 1610612755, 0, 589850, 1610612755, 0, 589851, 1610612755, 0, 589852, 1610612755, 0, 589853, 1610612755, 0, 589854, 1610612755, 0, 589855, 1610612755, 0, 655360, 1610612755, 0, 655361, 1610612755, 0, 655362, 1610612755, 0, 655363, 1610612755, 0, 655364, 1610612755, 0, 655365, 1610612755, 0, 655366, 1610612755, 0, 655367, 1610612755, 0, 655368, 1610612755, 0, 655369, 11, 0, 655380, -1073741824, 0, 655381, 1610612755, 0, 655382, 1610612755, 0, 655383, 1610612755, 0, 655384, 1610612755, 0, 655385, 1610612755, 0, 655386, 1610612755, 0, 655387, 1610612755, 0, 655388, 1610612755, 0, 655389, 1610612755, 0, 655390, 1610612755, 0, 655391, 1610612755, 0, 720896, 1610612755, 0, 720897, 1610612755, 0, 720898, 1610612755, 0, 720899, 1610612755, 0, 720900, 1610612755, 0, 720901, 1610612755, 0, 720902, 1610612755, 0, 720903, 1610612755, 0, 720904, 1610612755, 0, 720905, 1610612755, 0, 720906, 1, 0, 720907, 0, 0, 720908, -1073741813, 0, 720909, -1073741813, 0, 720910, 1, 0, 720911, 0, 0, 720912, -1073741813, 0, 720913, 1, 0, 720914, 0, 0, 720915, -1073741813, 0, 720916, 1610612755, 0, 720917, 1610612755, 0, 720918, 1610612755, 0, 720919, 1610612755, 0, 720920, 1610612755, 0, 720921, 1610612755, 0, 720922, 1610612755, 0, 720923, 1610612755, 0, 720924, 1610612755, 0, 720925, 1610612755, 0, 720926, 1610612755, 0, 720927, 1610612755, 0, 786432, 1610612755, 0, 786433, 1610612755, 0, 786434, 1610612755, 0, 786435, 1610612755, 0, 786436, 1610612755, 0, 786437, 1610612755, 0, 786438, 1610612755, 0, 786439, 1610612755, 0, 786440, 1610612755, 0, 786441, 1610612755, 0, 786442, 1610612755, 0, 786443, 1610612755, 0, 786444, 1610612755, 0, 786445, 1610612755, 0, 786446, 1610612755, 0, 786447, 1610612755, 0, 786448, 1610612755, 0, 786449, 1610612755, 0, 786450, 1610612755, 0, 786451, 1610612755, 0, 786452, 1610612755, 0, 786453, 1610612755, 0, 786454, 1610612755, 0, 786455, 1610612755, 0, 786456, 1610612755, 0, 786457, 1610612755, 0, 786458, 1610612755, 0, 786459, 1610612755, 0, 786460, 1610612755, 0, 786461, 1610612755, 0, 786462, 1610612755, 0, 786463, 1610612755, 0, 851968, 1610612755, 0, 851969, 1610612755, 0, 851970, 1610612755, 0, 851971, 1610612755, 0, 851972, 1610612755, 0, 851973, 1610612755, 0, 851974, 1610612755, 0, 851975, 1610612755, 0, 851976, 1610612755, 0, 851977, 1610612755, 0, 851978, 1610612755, 0, 851979, 1610612755, 0, 851980, 1610612755, 0, 851981, 1610612755, 0, 851982, 1610612755, 0, 851983, 1610612755, 0, 851984, 1610612755, 0, 851985, 1610612755, 0, 851986, 1610612755, 0, 851987, 1610612755, 0, 851988, 1610612755, 0, 851989, 1610612755, 0, 851990, 1610612755, 0, 851991, 1610612755, 0, 851992, 1610612755, 0, 851993, 1610612755, 0, 851994, 1610612755, 0, 851995, 1610612755, 0, 851996, 1610612755, 0, 851997, 1610612755, 0, 851998, 1610612755, 0, 851999, 1610612755, 0, 917504, 1610612755, 0, 917505, 1610612755, 0, 917506, 1610612755, 0, 917507, 1610612755, 0, 917508, 1610612755, 0, 917509, 1610612755, 0, 917510, 1610612755, 0, 917511, 1610612755, 0, 917512, 1610612755, 0, 917513, 1610612755, 0, 917514, 1610612755, 0, 917515, 1610612755, 0, 917516, 1610612755, 0, 917517, 1610612755, 0, 917518, 1610612755, 0, 917519, 1610612755, 0, 917520, 1610612755, 0, 917521, 1610612755, 0, 917522, 1610612755, 0, 917523, 1610612755, 0, 917524, 1610612755, 0, 917525, 1610612755, 0, 917526, 1610612755, 0, 917527, 1610612755, 0, 917528, 1610612755, 0, 917529, 1610612755, 0, 917530, 1610612755, 0, 917531, 1610612755, 0, 917532, 1610612755, 0, 917533, 1610612755, 0, 917534, 1610612755, 0, 917535, 1610612755, 0, 983040, 1610612755, 0, 983041, 1610612755, 0, 983042, 1610612755, 0, 983043, 1610612755, 0, 983044, 1610612755, 0, 983045, 1610612755, 0, 983046, 1610612755, 0, 983047, 1610612755, 0, 983048, 1610612755, 0, 983049, 1610612755, 0, 983050, 1610612755, 0, 983051, 1610612755, 0, 983052, 1610612755, 0, 983053, 1610612755, 0, 983054, 1610612755, 0, 983055, 1610612755, 0, 983056, 1610612755, 0, 983057, 1610612755, 0, 983058, 1610612755, 0, 983059, 1610612755, 0, 983060, 1610612755, 0, 983061, 1610612755, 0, 983062, 1610612755, 0, 983063, 1610612755, 0, 983064, 1610612755, 0, 983065, 1610612755, 0, 983066, 1610612755, 0, 983067, 1610612755, 0, 983068, 1610612755, 0, 983069, 1610612755, 0, 983070, 1610612755, 0, 983071, 1610612755, 0, 1048576, 1610612755, 0, 1048577, 1610612755, 0, 1048578, 1610612755, 0, 1048579, 1610612755, 0, 1048580, 1610612755, 0, 1048581, 1610612755, 0, 1048582, 1610612755, 0, 1048583, 1610612755, 0, 1048584, 1610612755, 0, 1048585, 1610612755, 0, 1048586, 1610612755, 0, 1048587, 1610612755, 0, 1048588, 1610612755, 0, 1048589, 1610612755, 0, 1048590, 1610612755, 0, 1048591, 1610612755, 0, 1048592, 1610612755, 0, 1048593, 1610612755, 0, 1048594, 1610612755, 0, 1048595, 1610612755, 0, 1048596, 1610612755, 0, 1048597, 1610612755, 0, 1048598, 1610612755, 0, 1048599, 1610612755, 0, 1048600, 1610612755, 0, 1048601, 1610612755, 0, 1048602, 1610612755, 0, 1048603, 1610612755, 0, 1048604, 1610612755, 0, 1048605, 1610612755, 0, 1048606, 1610612755, 0, 1048607, 1610612755, 0, 1114112, 1610612755, 0, 1114113, 1610612755, 0, 1114114, 1610612755, 0, 1114115, 1610612755, 0, 1114116, 1610612755, 0, 1114117, 1610612755, 0, 1114118, 1610612755, 0, 1114119, 1610612755, 0, 1114120, 1610612755, 0, 1114121, 1610612755, 0, 1114122, 1610612755, 0, 1114123, 1610612755, 0, 1114124, 1610612755, 0, 1114125, 1610612755, 0, 1114126, 1610612755, 0, 1114127, 1610612755, 0, 1114128, 1610612755, 0, 1114129, 1610612755, 0, 1114130, 1610612755, 0, 1114131, 1610612755, 0, 1114132, 1610612755, 0, 1114133, 1610612755, 0, 1114134, 1610612755, 0, 1114135, 1610612755, 0, 1114136, 1610612755, 0, 1114137, 1610612755, 0, 1114138, 1610612755, 0, 1114139, 1610612755, 0, 1114140, 1610612755, 0, 1114141, 1610612755, 0, 1114142, 1610612755, 0, 1114143, 1610612755, 0, 1179648, 1610612755, 0, 1179649, 1610612755, 0, 1179650, 1610612755, 0, 1179651, 1610612755, 0, 1179652, 1610612755, 0, 1179653, 1610612755, 0, 1179654, 1610612755, 0, 1179655, 1610612755, 0, 1179656, 1610612755, 0, 1179657, 1610612755, 0, 1179658, 1610612755, 0, 1179659, 1610612755, 0, 1179660, 1610612755, 0, 1179661, 1610612755, 0, 1179662, 1610612755, 0, 1179663, 1610612755, 0, 1179664, 1610612755, 0, 1179665, 1610612755, 0, 1179666, 1610612755, 0, 1179667, 1610612755, 0, 1179668, 1610612755, 0, 1179669, 1610612755, 0, 1179670, 1610612755, 0, 1179671, 1610612755, 0, 1179672, 1610612755, 0, 1179673, 1610612755, 0, 1179674, 1610612755, 0, 1179675, 1610612755, 0, 1179676, 1610612755, 0, 1179677, 1610612755, 0, 1179678, 1610612755, 0, 1179679, 1610612755, 0 )

[node name="PlataformasFlotantes" parent="." instance=ExtResource( 4 )]
position = Vector2( -704.088, -304.104 )
tile_data = PoolIntArray( 1966143, 17, 0, 1966164, -1610612719, 0, 2687039, -1073741807, 0, 2687060, 1610612753, 0 )

[node name="Antorcha" parent="." instance=ExtResource( 9 )]
position = Vector2( 503.409, 324.29 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 389.2, 336.39 )

[node name="Camera2D" parent="." instance=ExtResource( 7 )]
position = Vector2( 461.947, 287.5 )

[node name="TimerDead" parent="." instance=ExtResource( 5 )]

[node name="win" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="Colisiones" type="Node2D" parent="."]
position = Vector2( -4.23785, -63.5678 )

[node name="colision1" type="Area2D" parent="Colisiones"]
position = Vector2( 458.205, 339.411 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colisiones/colision1"]
position = Vector2( 0.709137, -1.26746 )
shape = SubResource( 1 )

[node name="colision2" type="Area2D" parent="Colisiones"]
position = Vector2( 526.631, 341.181 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colisiones/colision2"]
position = Vector2( 0.709137, -1.26746 )
shape = SubResource( 1 )
[connection signal="body_entered" from="Mascota" to="." method="_win_game"]
[connection signal="timeout" from="TimerDead" to="." method="_on_TimerDead_timeout"]
[connection signal="body_entered" from="Colisiones/colision1" to="." method="_on_colision1_body_entered"]
[connection signal="area_entered" from="Colisiones/colision2" to="." method="_on_colision2_entered"]
